--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     </head>
     <body class="container">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                     <a class="navbar-brand" href="#">Lauren Bullen</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="navbar-toggler-icon"></span>
@@ -28,3 +28,14 @@
                         </li>
                     </div>
             </nav>
+            <br>
+            <form class="form-inline col-md-3">
+                    <input class="form-control ml-sm-3" type="name" placeholder="Your Name" aria-label="Your Name"></input>
+                    <br>
+                    <input class="form-control ml-sm-3" type="email" placeholder="Email" aria-label="Email Address"></input>
+                    <br>
+                    <input class="form-control ml-sm-3" type="message" placeholder="Message" aria-label="Message"></input>
+                  </form>
+
+    </body> 
+</html>           
