--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,9 @@
         <meta name="description" content="Lauren Bullen's Portfolio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="assets/css/style.css">
     </head>
-    <body class="container">
+    <body>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                     <a class="navbar-brand" href="#">Lauren Bullen</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,13 +30,24 @@
                     </div>
             </nav>
             <br>
-            <form class="form-inline col-md-3">
-                    <input class="form-control ml-sm-3" type="name" placeholder="Your Name" aria-label="Your Name"></input>
-                    <br>
-                    <input class="form-control ml-sm-3" type="email" placeholder="Email" aria-label="Email Address"></input>
-                    <br>
-                    <input class="form-control ml-sm-3" type="message" placeholder="Message" aria-label="Message"></input>
-                  </form>
+            <form>
+                <ul class="form-style-1">
+                    <li><label>Full Name <span class="required">*</span>
+                    </label><input type="text" name="field1" class="field-divided" placeholder="First" /> <input type="text" name="field2" class="field-divided" placeholder="Last" />
+                    </li>
+                    <li>
+                        <label>Email <span class="required">*</span></label>
+                        <input type="email" name="field3" class="field-long" />
+                    </li>
+                    <li>
+                        <label>Your Message <span class="required">*</span></label>
+                        <textarea name="field5" id="field5" class="field-long field-textarea"></textarea>
+                    </li>
+                    <li>
+                        <input type="submit" value="Submit" />
+                    </li>
+                </ul>
+            </form>
 
     </body> 
 </html>           
