--- a/portfolio.html
+++ b/portfolio.html
@@ -7,8 +7,9 @@
         <meta name="description" content="Lauren Bullen's Portfolio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="assets/css/style.css">
     </head>
-    <body class="container">
+    <body>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                     <a class="navbar-brand" href="#">Lauren Bullen</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,18 +30,33 @@
                     </div>
             </nav>
             <br>
-            <div class="row">
+            <div class="container">
+              <div class="row">
+                  <div class="col-sm-4">
+                      <!-- <img class="img img-thumbnail" src="assets/babyBode.jpeg"> -->
+                    <img class="img-fluid" src="assets/images/magic.jpg" alt="Psychic Game">
+                    <h3><a href="https://laurenbullen.github.io/Psychic-Game/">Psychic Game</a></h3>
+                  </div>
+                  <div class="col-sm-4">
+                    <img class="img-fluid" src="assets/images/gem.jpg" alt="Crystal Collector">
+                    <h3><a href="https://laurenbullen.github.io/unit-4-game/">Crystal Collector</a></h3>
+                  </div>
+                  <div class="col-sm-4">
+                    <img class="img-fluid" src="assets/images/donut.jpg" alt="GifTastic">
+                    <h3><a href="https://laurenbullen.github.io/GifTastic/">GifTastic</a></h3>
+                  </div>    
+              </div>
+              <div class="row">
                 <div class="col-sm-4">
-                    <img class="img img-thumbnail" src="assets/babyBode.jpeg">
+                  <img class="img-fluid" src="assets/images/train.jpg" alt="Train Scheduler">
+                  <h3><a href="https://laurenbullen.github.io/Train-Schedule/">Train Scheduler</a></h3>
                 </div>
                 <div class="col-sm-4">
-                    <img class="img img-thumbnail" src="assets/snowBode.jpeg">
-                </div>
-                <div class="col-sm-4">
-                    <img class="img img-thumbnail" src="assets/bigBode.jpeg">
+                  <img class="img-fluid" src="assets/images/dishes-drinks.jpg" alt="Dishes and Drinks">
+                  <h3><a href="https://tfk808.github.io/Dishes-and-Drinks/">Dishes and Drinks</a></h3>
                 </div>    
             </div>
-        
+            </div>  
     </body>
 </html>            
 
