Added LIRI Bot to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,6 +54,10 @@
                 <div class="col-sm-4">
                   <img class="img-fluid" src="assets/images/dishes-drinks.jpg" alt="Dishes and Drinks">
                   <h3><a href="https://tfk808.github.io/Dishes-and-Drinks/">Dishes and Drinks</a></h3>
+                </div> 
+                <div class="col-sm-4">
+                  <img class="img-fluid" src="assets/images/liri-bot.jpg" alt="LIRI Bot">
+                  <h3><a href="https://laurenbullen.github.io/LIRI-Bot/">LIRI Bot</a></h3>
                 </div>    
             </div>
             </div>  
